Replaces invalid text characters in config

--- a/Required/server/default.conf
+++ b/Required/server/default.conf
@@ -3,24 +3,24 @@
 <properties>
 <comment>Open RSC Member World Config</comment>
 
-# Create a copy of this file named local.conf to override these settings
+<!-- Create a copy of this file named local.conf to override these settings -->
 
-# Server Config
-<entry key = "game_tick">600</entry> # tick speed of game and lower is faster
+<!-- Server Config -->
+<entry key = "game_tick">600</entry> <!-- tick speed of game and lower is faster -->
 <entry key = "client_version">1</entry>
 <entry key = "server_port">43594</entry>
 <entry key = "server_name">Open RSC</entry>
 <entry key = "server_location">USA</entry>
 <entry key = "maxplayers">100</entry>
-<entry key = "mysql_user">root</entry> # your MySQL username
-<entry key = "mysql_pass">root</entry> # your MySQL password
-<entry key = "mysql_db">openrsc_game</entry> # your game database
+<entry key = "mysql_user">root</entry>
+<entry key = "mysql_pass">root</entry>
+<entry key = "mysql_db">openrsc_game</entry>
 <entry key = "mysql_table_prefix">openrsc_</entry>
 <entry key = "mysql_host">localhost:3306</entry>
-<entry key = "HMAC_PRIVATE_KEY">root</entry> # this is not used at present
-<entry key = "avatar_generator">true</entry> # website uses avatars but this requires extra RAM
+<entry key = "HMAC_PRIVATE_KEY">root</entry>
+<entry key = "avatar_generator">false</entry> <!-- uses mroe ram -->
 
-# World Config
+<!-- World Config -->
 <entry key = "world_number">1</entry>
 <entry key = "member_world">true</entry>
 <entry key = "player_level_limit">99</entry>
@@ -31,10 +31,10 @@
 <entry key = "double_exp">false</entry>
 <entry key = "bank_size">192</entry>
 
-# Client Config
+<!-- Client Config -->
 <entry key = "view_distance">2</entry>
 <entry key = "zoom_view_toggle">false</entry>
-<entry key = "fog_toggle">false</entry> # client menu fog toggle
+<entry key = "fog_toggle">false</entry>
 <entry key = "ground_item_toggle">false</entry>
 <entry key = "menu_combat_style_toggle">false</entry>
 <entry key = "fightmode_selector_toggle">false</entry>
@@ -45,16 +45,16 @@
 <entry key = "want_skill_menus">false</entry>
 <entry key = "want_quest_menus">false</entry>
 
-# Custom Features
-<entry key = "spawn_auction_npcs">false</entry> # enables auction house
-<entry key = "spawn_iron_man_npcs">false</entry> # enables iron mans
+<!-- Custom Features -->
+<entry key = "spawn_auction_npcs">false</entry> <!-- enables auction house -->
+<entry key = "spawn_iron_man_npcs">false</entry> <!-- enables iron man -->
 <entry key = "show_floating_nametags">false</entry>
-<entry key = "want_clans">false</entry> # enables clans
+<entry key = "want_clans">false</entry>
 <entry key = "want_kill_feed">false</entry>
 <entry key = "side_menu_toggle">false</entry>
 <entry key = "inventory_count_toggle">false</entry>
 <entry key = "auto_message_switch_toggle">false</entry>
-<entry key = "batch_progression">false</entry> # enables skill batching
+<entry key = "batch_progression">false</entry> <!-- enables skill batching -->
 <entry key = "want_global_chat">false</entry>
 <entry key = "want_experience_elixirs">false</entry>
 <entry key = "want_keyboard_shortcuts">false</entry>
@@ -64,10 +64,10 @@
 <entry key = "want_exp_info">false</entry>
 <entry key = "want_woodcutting_guild">false</entry>
 <entry key = "want_decanting">false</entry>
-<entry key = "player_commands">false</entry> # grants regular players basic commands
-<entry key = "npc_blocking">2</entry> # 0 no npc blocks, 1 twice level+1 blocks, 2 any aggressive blocks, 3 any attackable blocks, 4 all npcs block
+<entry key = "player_commands">false</entry> <!-- grants regular players basic commands -->
+<entry key = "npc_blocking">2</entry> <!-- 0 no npc blocks, 1 twice level+1 blocks, 2 any aggressive blocks, 3 any attackable blocks, 4 all npcs block -->
 
-# Bank
+<!-- Bank -->
 <entry key = "right_click_bank">false</entry>
 <entry key = "want_custom_banks">false</entry>
 <entry key = "want_bank_pins">false</entry>
@@ -75,22 +75,22 @@
 <entry key = "want_cert_deposit">false</entry>
 <entry key = "want_certs_to_bank">false</entry>
 
-# NPC Kills
-<entry key = "npc_kill_messages">false</entry> # displays kill count of npc to player when killing an npc
-<entry key = "npc_kill_messages_filter">false</entry> # only display kill messages for npcs in npc_kill_messages_npcs
-<entry key = "npc_kill_messages_npcs">King Black Dragon, Black Dragon</entry> # comma seperated list without spaces, can store as: npc one,npctwo, etc
+<!-- NPC Kills -->
+<entry key = "npc_kill_messages">false</entry> <!-- displays kill count of npc to player when killing an npc -->
+<entry key = "npc_kill_messages_filter">false</entry> <!-- only display kill messages for npcs in npc_kill_messages_npcs -->
+<entry key = "npc_kill_messages_npcs">King Black Dragon, Black Dragon</entry> <!-- comma seperated list without spaces, can store as: npc one,npctwo, etc -->
 <entry key = "npc_kill_logging">false</entry>
 
-# Valuable Drops
-<entry key = "valuable_drop_messages">false</entry> # alerts player of rare drop
+<!-- Valuable Drops -->
+<entry key = "valuable_drop_messages">false</entry> <!-- alerts player of rare drop -->
 <entry key = "valuable_drop_ratio">0</entry>
 <entry key = "valuable_drop_extras">false</entry>
-<entry key = "valuable_drop_items">Half of a key, Half Dragon Square Shield</entry> # comma seperated list without spaces same formatting as npc_kill_message_npcs, can store as: item one,item two, etc
+<entry key = "valuable_drop_items">Half of a key, Half Dragon Square Shield</entry> <!-- comma seperated list without spaces same formatting as npc_kill_message_npcs, can store as: item one,item two, etc -->
 
-# Strict checks on allowed glitches
-<entry key="strict_check_all">false</entry> # makes all checks strict
-<entry key="strict_pdart_check">false</entry> # makes the poisoned throwing dart requirement strict
-<entry key="strict_pknife_check">false</entry> # makes the poisoned throwing knife requirement strict
-<entry key="strict_pspear_check">false</entry> # makes the poisoned spear requirement strict
+<!-- Strict checks on allowed glitches -->
+<entry key="strict_check_all">false</entry> <!-- makes all checks strict-->
+<entry key="strict_pdart_check">false</entry> <!-- makes the poisoned throwing dart requirement strict -->
+<entry key="strict_pknife_check">false</entry> <!-- makes the poisoned throwing knife requirement strict -->
+<entry key="strict_pspear_check">false</entry> <!-- makes the poisoned spear requirement strict -->
 
 </properties>
