--- a/Required/server/build.xml
+++ b/Required/server/build.xml
@@ -1,6 +1,52 @@
 <project default="compile_core" basedir=".">
+    <property name="src" location="src"/>
+    <property name="build" location="build"/>
     <property name="lib" location="lib"/>
     <property name="jar" location="core.jar"/>
+    <property name="javac.source" value="1.8"/>
+    <property name="javac.target" value="1.8"/>
+
+    <target name="compile_plugins">
+        <delete file="plugins.jar"/>
+        <delete dir="buildplugins"/>
+        <mkdir dir="buildplugins"/>
+        <javac srcdir="plugins" destdir="buildplugins" debug="on" includeantruntime="false" target="${javac.target}" source="${javac.source}">
+            <classpath>
+                <pathelement location="core.jar"/>
+                <pathelement path="${java.class.path}/"/>
+                <pathelement location="${lib}/log4j-api-2.8.jar"/>
+                <pathelement location="${lib}/log4j-core-2.8.jar"/>
+                <pathelement location="${lib}/disruptor-3.3.5.jar"/>
+                <pathelement location="${lib}/commons-lang-2.6.jar"/>
+            </classpath>
+            <compilerarg line="-Xlint:unchecked"/>
+        </javac>
+        <jar basedir="buildplugins" destfile="plugins.jar"/>
+        <delete dir="buildplugins"/>
+    </target>
+
+    <target name="compile_core">
+        <delete file="${jar}"/>
+        <delete dir="${build}"/>
+        <mkdir dir="${build}"/>
+        <javac srcdir="${src}" destdir="${build}" debug="on" includeantruntime="false" target="${javac.target}" source="${javac.source}">
+            <classpath>
+                <pathelement location="${lib}/netty-all-4.1.8.Final.jar"/>
+                <pathelement location="${lib}/log4j-api-2.8.jar"/>
+                <pathelement location="${lib}/log4j-core-2.8.jar"/>
+                <pathelement location="${lib}/xpp3_min-1.1.4c.jar"/>
+                <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
+                <pathelement location="${lib}/xstream-1.4.9.jar"/>
+                <pathelement location="${lib}/mysql-connector-java-5.1.40-bin.jar"/>
+                <pathelement location="${lib}/disruptor-3.3.5.jar"/>
+                <pathelement location="${lib}/commons-lang-2.6.jar"/>
+                <pathelement location="${lib}/*"/>
+                <pathelement path="${java.class.path}/"/>
+            </classpath>
+        </javac>
+        <jar basedir="${build}" destfile="${jar}"/>
+        <delete dir="${build}"/>
+    </target>
 
     <target name="runserver">
         <java classname="com.openrsc.server.Server" fork="true">
@@ -21,5 +67,11 @@
                 <pathelement path="${jar}/"/>
             </classpath>
         </java>
+    </target>
+
+    <target name="compile-and-run">
+        <antcall target="compile_core"/>
+        <antcall target="compile_plugins"/>
+        <antcall target="runserver"/>
     </target>
 </project>
