--- a/Required/server/default.conf
+++ b/Required/server/default.conf
@@ -44,7 +44,7 @@
 <entry key = "show_roof_toggle">false</entry>
 <entry key = "want_skill_menus">false</entry>
 <entry key = "want_quest_menus">false</entry>
-<entry key = "want_hide_ip">true</entry> <!-- displays hide ip button on login screen -->
+<entry key = "want_hide_ip">false</entry> <!-- displays hide ip button on login screen -->
 
 <!-- Custom Features -->
 <entry key = "spawn_auction_npcs">false</entry> <!-- enables auction house -->
@@ -69,10 +69,10 @@
 <entry key = "npc_blocking">2</entry> <!-- 0: disabled; 1: 2x+1 combat level; 2: all aggressive; 3: any attackable -->
 
 <!-- Bank -->
-<entry key = "right_click_bank">true</entry>
+<entry key = "right_click_bank">false</entry>
 <entry key = "want_custom_banks">false</entry>
 <entry key = "want_bank_pins">false</entry>
-<entry key = "want_bank_notes">true</entry>
+<entry key = "want_bank_notes">false</entry>
 <entry key = "want_cert_deposit">false</entry>
 <entry key = "want_certs_to_bank">false</entry>
 
